force-app/main/default/objects/Crew_Mapping__c/Crew_Mapping__c.object-meta.xml
<CustomObject>
    <label>Crew Mapping</label>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Crew Mapping No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>