force-app/main/default/objects/Crew_Mapping__c/fields/CrewId__c.field-meta.xml
<CustomField>
    <fullName>CrewId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Crew Mappings</relationshipLabel>
    <relationshipName>Crew_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>