force-app/main/default/objects/Crew_Mapping__c/fields/Synced_Flights__c.field-meta.xml
<CustomField>
    <fullName>Synced_Flights__c</fullName>
    <label>Synced Flights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>