force-app/main/default/objects/Crew_Mapping__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Crew_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>