force-app/main/default/objects/Crew_Mapping__c/listViews/UAT_In_Flight.listView-meta.xml
<ListView>
    <fullName>UAT_In_Flight</fullName>
    <columns>NAME</columns>
    <columns>CrewId__c</columns>
    <columns>UserId__c</columns>
    <columns>isActive__c</columns>
    <columns>Last_Sync_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserId__c</field>
        <operation>contains</operation>
        <value>q114</value>
    </filters>
    <label>Create Today</label>
    <language>en_US</language>
</ListView>